<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Project01Activity!</string>
    <string name="app_name">Skyrim Gate</string>
    <string name="apptitle">Skyrim Gate</string>
    <string name="button01text">The Gameplay</string>
    <string name="button02text">The World</string>
    <string name="button03text">The More...</string>
    <string name="page1title1">The Truth Dawns In Fire</string>
    <string name="page1intro1">The High King of Skyrim has been murdered. 
        In the midst, a far more dangerous, ancient evil is awakened. </string>
    <string name="page1intro2">The High King of Skyrim has been murdered. 
        In the midst, a far more dangerous, ancient evil is awakened. </string>
        
    
    
    <string name="g_tag1">Experience Reimagined</string>
    <string name="g_t1">Skyrim revolutionizes the open-world fantasy epic, 
        bringing to life a complete virtual world open for you 
        to explore.</string>
    <string name="g_tag2">Dragon-Slayer</string>
    <string name="g_t3">Battle dragons like you have never seen.
		As Dragonborn, learn their harness and power for yourself.</string>
    <string name="g_t2">Play any type of character you can imagine, and do 
        whatever you want; it comes to life like never before. Choose from hundreds
         of weapons, spells, and abilities. The new character system allows you 
         to play any way you want and define yourself through your actions.</string>
    <string name="g_t4">Dragon Shouts (a.k.a. The Voice or Thuum) are phrases of Dragon
         Language that can be used to unleash powerful effects, including breathing fire,
          freezing time or summoning ancient heroes. Dragons are naturally able to 
          use Dragon Shouts, but very few people are able to use them. Your 
          character, as the Dovahkiin, can use the Thuum as naturally as Dragons.</string>
    
    
    <string name="w_tag1">The Truth Dawns In Fire</string>
    <string name="w_t1">The High King of Skyrim has been murdered. 
        In the midst, a far more dangerous, ancient evil is awakened. </string>
    <string name="w_t2">Skyrim is the Northern province, home of the Nords. 
        After the Crisis of Oblivion 200 years ago, their worship of Talos, 
        the Empire-maker, the Man-God, is now banned by Elf-controlled council. 
        With the death of High King Torygg, the flood gates of civil war break loose, 
        and brothers are slaying brothers across the frozen tundras and rocky crags. </string>
        
    <string name="w_tag2">Myth of Elder Scroll </string>
    <string name="w_t3">A great prophecy has been foretold in the Elder Scrolls; 
        one that foretells the return of Tamriel’s primeval darkness, the Dragons. </string>
    <string name="w_t4">The scrolls also tell of the coming of a mortal born with 
        the soul of a dragon, the "Dovahkiin" or Dragonborn. One who will have the power 
        to permanently defeat his greatest foe and end the dark reign of the consumer of 
        worlds: Alduin.</string>

    <string name="w_t5">Now great adventurer, free yourself from bondage; take up blade or spell,
         bow or axe; fulfill your destiny or watch as the world ends around you. 
         Welcome to the land of heroes and deities, Skyrim.</string>
</resources>