<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	    <!-- ################ .BuildingBlock ################ -->
		<TextView
		  android:id="@+id/w_tag1"
		  android:text="@string/w_tag1"
		  style="@style/subbanner"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:padding="10dp">
            <ImageButton
                android:id="@+id/w_img1"
                android:background="@drawable/intro01"
            	android:layout_width="wrap_content"
            	android:layout_height="150dp" 
                android:layout_marginRight="10dp"            	
           	    android:layout_weight="0.4"/>
            <TextView
                android:id="@+id/w_t1"
                android:text="@string/w_t1"
            	android:layout_weight="0.6"
            	android:layout_width="fill_parent"
                style="@style/smalltextright"/>
        </LinearLayout>
        
        <TextView
        android:id="@+id/w_t2"
        android:text="@string/w_t2"
        style="@style/smalltext"/>
        
        <TextView
         android:id="@+id/worldg_intro"
         android:text="- Skyrim Landscape Gallery -"
      	 style="@style/link" /> 

        <Gallery
         android:id="@+id/gallery_world"
         android:layout_width="wrap_content"
         android:layout_height="200dp" 
         android:gravity="center"
	     android:layout_margin="20dp"
         android:spacing="10dp"/>
        
        <!-- ################ .BuildingBlock ################ -->
		<TextView
		  android:id="@+id/w_tag2"
		  android:text="@string/w_tag2"
		  style="@style/subbanner"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:padding="10dp">
            <ImageButton
                android:id="@+id/w_img2"
                android:background="@drawable/intro02"
            	android:layout_width="fill_parent"
            	android:layout_height="150dp" 
                android:layout_marginRight="10dp"            	
           	    android:layout_weight="0.4"/>
            <TextView
                android:id="@+id/w_t3"
                android:text="@string/w_t3"
            	android:layout_weight="0.6"
            	android:layout_width="fill_parent"
                style="@style/smalltextright"/>
        </LinearLayout>

        <TextView
        android:id="@+id/w_t4"
        android:text="@string/w_t4"
        style="@style/smalltext"/> 
        <TextView
        android:id="@+id/w_t5"
        android:text="@string/w_t5"
        style="@style/smalltext"/> 
        
        <TextView
         android:id="@+id/trailer"
         android:text="- Watch Official Trailer Online -"
      	 style="@style/link" />
        <TextView
         android:id="@+id/gotomore"
         android:text="(Or, you may watch it here)"
      	 style="@style/link" />  
</LinearLayout>