<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	    <!-- ################ .BuildingBlock ################ -->
		<TextView
		  android:id="@+id/textView1"
		  android:text="@string/page1title1"
		  style="@style/subbanner"/>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_weight="0" 
            android:padding="10dp">
            <ImageView
                android:id="@+id/imageView2"
                android:src="@drawable/intro01_db"
                android:layout_width="200dp"
                android:layout_height="130dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/textView2"
                android:text="@string/page1intro1"
                style="@style/smalltextright"/>
        </LinearLayout>
        
        <!-- ################ .DivisionLine ################ -->
        
	    <!-- ################ .BuildingBlock ################ -->

       <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_weight="0"
            android:padding="10dp">
            <TextView
                android:id="@+id/textView3"
                style="@style/smalltextright"
                android:layout_width="130dp" 
                android:text="@string/page1intro2" 
                android:layout_marginRight="10dp"/>
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/intro02_white_2"/>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/fancyliner" />

        </LinearLayout>

</LinearLayout>